spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,8 @@ justify-content: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rebeccapurple;
+    text-shadow: 2px 2px 5px cyan;
   }
   
   .hero-text button {
